--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,10 +70,12 @@ dependencies:
   audio_video_progress_bar: ^0.1.0
   auto_orientation: ^1.0.6
   native_device_orientation: ^0.4.3
+  better_player: ^0.0.35
+  chewie: ^0.12.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
   font_awesome_flutter: ^8.10.0
 
 dev_dependencies:
