--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,15 @@ dependencies:
   cupertino_icons: ^1.0.0
   font_awesome_flutter: ^8.10.0
 
+dev_dependencies:
+  flutter_launcher_icons: ^0.8.1
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
