--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   sqflite: ^1.3.2+1
   path: ^1.7.0
   flutter_map: ^0.10.1+1
-  audioplayers: ^0.17.4
+  audioplayers: ^0.16.2
   flutter_datetime_picker: ^1.4.0
   flutter_datetime_formfield: ^0.1.2
   datetime_picker_formfield: ^1.0.0
@@ -85,7 +85,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/logo.png"
+  image_path: "assets/images/launch_logo.jpg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
