--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   table_calendar: ^2.3.0
   grouped_list: ^3.7.0
   smooth_star_rating: ^1.1.1
+  flutter_rating_bar: ^3.2.0+1
   permission: ^0.1.7
   video_player: ^1.0.1
   connectivity: ^2.0.2
@@ -72,6 +73,8 @@ dependencies:
   native_device_orientation: ^0.4.3
   better_player: ^0.0.35
   chewie: ^0.12.2
+  email_validator: ^1.0.6
+  flutter_email_sender: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
