--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,6 +38,8 @@ android {
         targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifestPlaceholders = [appAuthRedirectScheme: "com.example.multi_delivery_app",
+                                applicationName: "com.example.multi_delivery_app.Application"]
     }
 
     buildTypes {
@@ -45,6 +47,9 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+            minifyEnabled true
+            shrinkResources true
+            useProguard true
         }
     }
 }
