--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -59,10 +59,10 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
 
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAMygy16V5JDa3bCTI2OpjYMwUCO1UdfxI" />
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+<!--        <meta-data-->
+<!--            android:name="com.google.android.geo.API_KEY"-->
+<!--            android:value="AIzaSyAMygy16V5JDa3bCTI2OpjYMwUCO1UdfxI" />-->
+<!--        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />-->
     </application>
     <meta-data
         android:name="flutterEmbedding"
