--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   http: ^0.12.0+2
   flutter_open_whatsapp: ^0.1.2
   url_launcher: ^5.7.10
-  location: ^2.3.5
+#  location: ^2.3.5
   flutter_map: ^0.10.1+1
   fluster: ^1.1.2
   flutter_cache_manager: ^1.1.1
